[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
rocket = "=0.5.0-rc.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

axiom-eth = { path = "/Users/sohamzemse/Workspace/cloned-repos/axiom-eth/axiom-eth" }
snark-verifier = { path = "/Users/sohamzemse/Workspace/cloned-repos/axiom-snark-verifier/snark-verifier", default-features = false, features = ["loader_halo2"], optional = true }
snark-verifier-sdk = { path = "/Users/sohamzemse/Workspace/cloned-repos/axiom-snark-verifier/snark-verifier-sdk", default-features = false, features = ["loader_halo2"], optional = true }